<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/distance"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/txtNumberOfRepetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_of_repetitions"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtNumberOfSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_of_sets"
        android:inputType="number"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <AutoCompleteTextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/description"
        android:inputType="text" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddDescription"
            android:background="@android:drawable/ic_input_add"/>
    </LinearLayout>
    <EditText
        android:id="@+id/txtIntensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/intensity_from_1_to_5"
        android:inputType="number"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="normal|bold" />


</LinearLayout>