<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">



        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/general_rv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"

            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="parent"
             />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical"
            android:text="@string/general"
            android:gravity="center|top"
            android:rotation="90"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/general_rv"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
    <android.support.constraint.Guideline
        android:id="@+id/guideline_right1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"

        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right1"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/specific_rv"
        />
        <com.dobrowol.traininglog.util.VerticalTextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:orientation="vertical"
            android:text="@string/specific"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/specific_rv"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
    <android.support.constraint.Guideline
        android:id="@+id/guideline_right2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"

        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/competitive_rv"
        />
        <com.dobrowol.traininglog.util.VerticalTextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="end"
            android:orientation="vertical"
            android:text="@string/competitive"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/competitive_rv"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dateTxt"
    android:gravity="center"
    android:textSize="36sp"
    android:layout_weight="1"
    />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeTxt"
            android:gravity="center"
            android:textSize="36sp"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="@dimen/fab_margin_second">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"

        app:srcCompat="@android:drawable/ic_input_add" />

</LinearLayout>
</RelativeLayout>